--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,6 @@ name = "pypi"
 "e1839a8" = {path = ".", editable = true}
 
 [dev-packages]
-
 "flake8" = "*"
 twine = "*"
 wheel = "*"
@@ -19,6 +18,7 @@ mkdocs-material = "*"
 pytest = "*"
 pytest-cov = "*"
 pytest-mock = "*"
+pyfakefs = "*"
 
 [requires]
 python_version = "3.6"
