--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 addopts=
     --cov=prajna
     --cov-report=term-missing
+    --cov-fail-under=100
     --quiet
 
 [coverage:report]
@@ -13,5 +14,4 @@ show_missing=True
 max-line-length=120
 exclude=.venv
 per-file-ignores =
-    **/*.py: F405
-    tests/*.py: D101,D102
+    tests/*.py: D103
